Move SwiftDiagnostic to SwiftSyntax

--- a/Sources/SwiftParser/CMakeLists.txt
+++ b/Sources/SwiftParser/CMakeLists.txt
@@ -55,5 +55,4 @@ add_swift_syntax_library(SwiftParser
 )
 
 target_link_swift_syntax_libraries(SwiftParser PUBLIC
-  SwiftSyntax
-  SwiftDiagnostics)
+  SwiftSyntax)
